# crypto-oms

./: .gitignore  Cargo.toml
configs/: hl_demo.yaml  mm_hibachi.yaml  mm_hl.yaml  mm_hl_test.yaml  nado_demo.yaml
crates/oms-core/: Cargo.toml
crates/oms-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/oms-core/src/state_tracker/: mod.rs  tests.rs
scripts/: nado_link_signer.py
src/: lib.rs
src/hibachi/: client.rs  mod.rs  oms.rs  types.rs
src/hyperliquid/: client.rs  mod.rs  oms.rs  types.rs
src/mm/: config.rs  display.rs  fair_price.rs  inventory.rs  mod.rs
src/nado/: client.rs  mod.rs  oms.rs  types.rs
