[workspace]
members = [".", "crates/oms-core"]

[package]
name = "crypto-oms"
version = "0.1.0"
edition = "2024"

[features]
profiling = []
log_status = []
log_state = []
display = []
sched_fifo = []

[dependencies]
oms-core = { path = "crates/oms-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
crossbeam-channel = "0.5"
dashmap = "6"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
alloy = { version = "1", default-features = false, features = ["signer-local", "sol-types"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
futures-util = "0.3"
crypto-feeds = { path = "../crypto-feeds" }
nado-ws = { path = "../crypto-feeds/crates/nado-ws" }
serde_yaml = "0.9"
rmp-serde = "1"
hyperliquid_rust_sdk = { path = "../hyperliquid-rust-sdk" }
uuid = { version = "1", features = ["v4"] }
memmap2 = "0.9"
ctrlc = "3"
libc = "0.2"
dotenv = "0.15"
core_affinity = "0.8"

[patch.crates-io]
tungstenite = { git = "https://github.com/signalapp/tungstenite-rs" }

[[bin]]
name = "hl_demo"
path = "src/bin/hl_demo.rs"

[[bin]]
name = "hl_dump"
path = "src/bin/hl_dump.rs"

[[bin]]
name = "nado_demo"
path = "src/bin/nado_demo.rs"

[[bin]]
name = "nado_link_signer"
path = "src/bin/nado_link_signer.rs"

[[bin]]
name = "hibachi_demo"
path = "src/bin/hibachi_demo.rs"

[[bin]]
name = "mm_hl"
path = "src/bin/mm_hl.rs"

[[bin]]
name = "mm_profile"
path = "src/bin/mm_profile.rs"
