[package]
name = "oms-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
